--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "Color Picker",
-    "version": "1.0",
-    "description": "A simple color picker tool.",
+    "name": "Color Picker Pro",
+    "version": "2.0",
+    "description": "A versatile color picker tool with multiple formats, history, and color palettes.",
     "action": {
         "default_popup": "index.html",
         "default_icon": {
@@ -11,11 +11,11 @@
             "128": "icons/icon128.png"
         }
     },
-    "permissions": ["clipboardWrite"],
+    "permissions": ["clipboardWrite", "storage"],
     "browser_specific_settings": {
         "gecko": {
             "id": "colorpicker@mysteriousimmature.com",
-            "strict_min_version": "109.0"
+            "strict_min_version": "58.0"
         }
     },
     "icons": {
